--- a/app/backend/Dockerfile
+++ b/app/backend/Dockerfile
@@ -12,3 +12,15 @@
 
 # Configurar os comandos para iniciar a aplicação de acordo com as boas práticas
 # Dica: Leia a seção Docker e Docker-compose no README para mais informações
+
+FROM node:16.14-alpine
+
+WORKDIR /app-backend
+
+COPY . /app-backend/
+
+RUN npm install
+
+EXPOSE 3001
+
+ENTRYPOINT [ "npm", "run", "dev" ]
